# camera_related_practices

./: README.md
gradient_magnitude/: CMakeLists.txt
gradient_magnitude/src/: gradient_magnitude.cpp
harris_corner/: CMakeLists.txt
harris_corner/src/: harris_corner.cpp
keypoint_descriptor/: CMakeLists.txt
keypoint_descriptor/src/: keypoint_descriptor.cpp
keypoint_detector/: CMakeLists.txt
keypoint_detector/src/: keypoint_detector.cpp
keypoint_matcher/: CMakeLists.txt
keypoint_matcher/src/: keypoint_matcher.cpp
lidar_points_to_image_projection/: CMakeLists.txt
lidar_points_to_image_projection/src/: lidar_points_to_image_projection.cpp
object_detection/: CMakeLists.txt  README.md
object_detection/src/: object_detection.cpp
